finish create views

--- a/App/App.GRRInnovations.TodoManager/Views/TodayView.xaml
+++ b/App/App.GRRInnovations.TodoManager/Views/TodayView.xaml
@@ -7,7 +7,7 @@
              x:DataType="vm:TodayViewModel">
     <VerticalStackLayout>
         <Label HorizontalOptions="Center"
-               Text="Welcome to .NET MAUI!"
+               Text="teste"
                VerticalOptions="Center" />
     </VerticalStackLayout>
 </ContentPage>
