--- a/App/App.GRRInnovations.TodoManager/Views/BundleView.xaml
+++ b/App/App.GRRInnovations.TodoManager/Views/BundleView.xaml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8" ?>
-<ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
+<ContentPage x:Class="App.GRRInnovations.TodoManager.Views.BundleView"
+             xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="App.GRRInnovations.TodoManager.Views.BundleView"
-             Title="BundleView">
+             xmlns:vm="clr-namespace:App.GRRInnovations.TodoManager.ViewModels"
+             Title="BundleView"
+             x:DataType="vm:BundleViewModel">
     <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
+        <Label HorizontalOptions="Center"
+               Text="Welcome to .NET MAUI!"
+               VerticalOptions="Center" />
     </VerticalStackLayout>
 </ContentPage>
