--- a/App/App.GRRInnovations.TodoManager/Views/SearchView.xaml
+++ b/App/App.GRRInnovations.TodoManager/Views/SearchView.xaml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8" ?>
-<ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
+<ContentPage x:Class="App.GRRInnovations.TodoManager.Views.SearchView"
+             xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="App.GRRInnovations.TodoManager.Views.SearchView"
-             Title="SearchView">
-    <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
+             xmlns:vm="clr-namespace:App.GRRInnovations.TodoManager.ViewModels"
+             Title="SearchView"
+             x:DataType="vm:SearchViewModel">
+    <VerticalStackLayout BackgroundColor="LightYellow">
+        <Label HorizontalOptions="Center"
+               Text="Batata"
+               VerticalOptions="Center" />
     </VerticalStackLayout>
 </ContentPage>
