--- a/App/App.GRRInnovations.TodoManager/Views/TabbedPageHomeView.xaml
+++ b/App/App.GRRInnovations.TodoManager/Views/TabbedPageHomeView.xaml
@@ -9,10 +9,4 @@
             android:TabbedPage.ToolbarPlacement="Bottom"
             BarBackgroundColor="AliceBlue"
             SelectedTabColor="#512BD4"
-            UnselectedTabColor="Gray">
-
-    <!--<views:FutureView />
-    <views:SearchView />
-    <views:BundleView />-->
-
-</TabbedPage>
+            UnselectedTabColor="Gray" />
