--- a/App/App.GRRInnovations.TodoManager/Views/BundleView.xaml
+++ b/App/App.GRRInnovations.TodoManager/Views/BundleView.xaml
@@ -2,12 +2,104 @@
 <ContentPage x:Class="App.GRRInnovations.TodoManager.Views.BundleView"
              xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:avatarview="clr-namespace:Syncfusion.Maui.Core;assembly=Syncfusion.Maui.Core"
              xmlns:vm="clr-namespace:App.GRRInnovations.TodoManager.ViewModels"
              Title="BundleView"
              x:DataType="vm:BundleViewModel">
-    <VerticalStackLayout>
-        <Label HorizontalOptions="Center"
-               Text="Welcome to .NET MAUI!"
-               VerticalOptions="Center" />
-    </VerticalStackLayout>
+
+    <ContentPage.Resources>
+        <Style x:Key="labelGroupSettings" TargetType="Label">
+            <Setter Property="Margin" Value="10" />
+            <Setter Property="FontAttributes" Value="Italic" />
+            <Setter Property="FontSize" Value="16" />
+            <Setter Property="TextColor" Value="Red" />
+        </Style>
+
+        <Style x:Key="labelMenuIten" TargetType="Label">
+            <Setter Property="FlexLayout.AlignContent" Value="Center" />
+        </Style>
+
+        <Style x:Key="imageMenuIten" TargetType="Image">
+            <Setter Property="Margin" Value="0,0,10,0" />
+            <Setter Property="HeightRequest" Value="25" />
+            <Setter Property="WidthRequest" Value="25" />
+        </Style>
+    </ContentPage.Resources>
+
+    <Grid Padding="10"
+          BackgroundColor="LightBlue"
+          RowDefinitions="0.2*, *">
+
+        <HorizontalStackLayout>
+            <avatarview:SfAvatarView ContentType="Custom"
+                                     CornerRadius="50"
+                                     HeightRequest="100"
+                                     HorizontalOptions="Center"
+                                     ImageSource="foto_app.jpg"
+                                     VerticalOptions="Center"
+                                     WidthRequest="100" />
+
+            <HorizontalStackLayout Margin="10,10,0,0" VerticalOptions="Start">
+                <Image Margin="0,0,10,0"
+                       HeightRequest="25"
+                       Source="perfil_usuario.png"
+                       WidthRequest="25" />
+                <VerticalStackLayout>
+                    <Label FontSize="12" Text="Name" />
+                    <Label FontSize="15"
+                           Text="Gabriel Ribeiro"
+                           TextColor="Black" />
+                </VerticalStackLayout>
+            </HorizontalStackLayout>
+        </HorizontalStackLayout>
+
+        <!--  todo mover para o cs criar os menus dinamicamente  -->
+
+        <VerticalStackLayout Grid.Row="1" BackgroundColor="AntiqueWhite">
+
+            <Label Style="{StaticResource labelGroupSettings}" Text="Settings" />
+            <FlexLayout Margin="10">
+                <Image Source="perfil_usuario.png" Style="{StaticResource imageMenuIten}" />
+                <Label FlexLayout.AlignSelf="Center" Text="Account" />
+            </FlexLayout>
+            <FlexLayout Margin="10">
+                <Image Source="engrenagem.png" Style="{StaticResource imageMenuIten}" />
+                <Label FlexLayout.AlignSelf="Center" Text="General" />
+            </FlexLayout>
+            <FlexLayout Margin="10">
+                <Image Source="sincronizar.png" Style="{StaticResource imageMenuIten}" />
+                <Label FlexLayout.AlignSelf="Center" Text="Sync" />
+            </FlexLayout>
+            <Border BackgroundColor="LightGray" HeightRequest="1" />
+
+            <Label Style="{StaticResource labelGroupSettings}" Text="Productivy" />
+            <FlexLayout Margin="10">
+                <Image Source="produtividade.png" Style="{StaticResource imageMenuIten}" />
+                <Label FlexLayout.AlignSelf="Center" Text="Productivity" />
+            </FlexLayout>
+            <Border BackgroundColor="LightGray" HeightRequest="1" />
+
+            <Label Style="{StaticResource labelGroupSettings}" Text="Personalization" />
+            <FlexLayout Margin="10">
+                <Image Source="temas.png" Style="{StaticResource imageMenuIten}" />
+                <Label FlexLayout.AlignSelf="Center" Text="Theme" />
+            </FlexLayout>
+            <Border BackgroundColor="LightGray" HeightRequest="1" />
+
+            <Label Style="{StaticResource labelGroupSettings}" Text="More" />
+            <FlexLayout Margin="10">
+                <Image Source="bate_papo_online.png" Style="{StaticResource imageMenuIten}" />
+                <Label FlexLayout.AlignSelf="Center" Text="Support" />
+            </FlexLayout>
+            <FlexLayout Margin="10">
+                <Image Source="informacoes.png" Style="{StaticResource imageMenuIten}" />
+                <Label FlexLayout.AlignSelf="Center" Text="About" />
+            </FlexLayout>
+            <FlexLayout Margin="10">
+                <Image Source="sair.png" Style="{StaticResource imageMenuIten}" />
+                <Label FlexLayout.AlignSelf="Center" Text="Log out" />
+            </FlexLayout>
+
+        </VerticalStackLayout>
+    </Grid>
 </ContentPage>
