--- a/App/App.GRRInnovations.TodoManager/Views/TodayView.xaml
+++ b/App/App.GRRInnovations.TodoManager/Views/TodayView.xaml
@@ -2,6 +2,8 @@
 <ContentPage x:Class="App.GRRInnovations.TodoManager.Views.TodayView"
              xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:apiModels="clr-namespace:App.GRRInnovations.TodoManager.Domain.ApiTodoManagerCommunic.Models;assembly=App.GRRInnovations.TodoManager.Domain"
+             xmlns:interfaces="clr-namespace:App.GRRInnovations.TodoManager.Interfaces.Enuns;assembly=App.GRRInnovations.TodoManager.Interfaces"
              xmlns:mct="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
              xmlns:models="clr-namespace:App.GRRInnovations.TodoManager.Models"
              xmlns:sys="clr-namespace:System;assembly=mscorlib"
@@ -28,7 +30,7 @@
                             BackgroundColor="LightBlue"
                             ItemsSource="{Binding Appointments}">
                 <CollectionView.ItemTemplate>
-                    <DataTemplate x:DataType="models:AppointmentModel">
+                    <DataTemplate x:DataType="interfaces:ITaskModel">
                         <HorizontalStackLayout Margin="5,0,0,0">
                             <Label FontAttributes="Bold" Text="{Binding Title}" />
                             <Label Text=" - " />
