--- a/App/App.GRRInnovations.TodoManager/Views/TodayView.xaml
+++ b/App/App.GRRInnovations.TodoManager/Views/TodayView.xaml
@@ -2,7 +2,7 @@
 <ContentPage x:Class="App.GRRInnovations.TodoManager.Views.TodayView"
              xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:interfaces="clr-namespace:App.GRRInnovations.TodoManager.Interfaces.Models;assembly=App.GRRInnovations.TodoManager.Interfaces"
+             xmlns:interfaces="clr-namespace:App.GRRInnovations.TodoManager.Integration.TodoManager.Api.Interfaces;assembly=App.GRRInnovations.TodoManager.Integration.TodoManager.Api"
              xmlns:mct="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
              xmlns:sys="clr-namespace:System;assembly=mscorlib"
              xmlns:vm="clr-namespace:App.GRRInnovations.TodoManager.ViewModels"
